# apitap-lib

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
benchmarks/: .env.example  README.md  dlt-mysql.py  gcp-benchmark.md  pgo-build.sh  run-bigquery.sh  run-gcs.sh  run-mysql-dest.sh  run-server.sh  run.py  seed.sql  seed_mysql.sql  validate-bigquery.sh
benchmarks/gcp/: README.md  bench_a.sh  bench_b.sh  dlt_run.py  provision.sh  setup-dbs.sh  setup-ingest.sh  teardown.sh
crates/apitap-core/: Cargo.toml
crates/apitap-core/src/: bqparquet.rs  driver.rs  error.rs  gcp.rs  lib.rs  pgcopy.rs  plan.rs  rowbinary.rs
crates/apitap-core/src/connectors/: bigquery.rs  clickhouse.rs  mod.rs  mysql.rs  mysql_sink.rs  postgres.rs
crates/apitap-core/src/dialect/: mod.rs  mysql.rs  postgres.rs
crates/apitap-core/src/pipeline/: dispatch.rs  mod.rs
crates/apitap-core/src/sink/: bigquery.rs  clickhouse.rs  gcs.rs  mod.rs  mysql.rs  postgres.rs
crates/apitap-core/src/source/: csvfile.rs  github.rs  github_api.rs  gsheets.rs  mod.rs  mysql.rs  postgres.rs
crates/apitap-core/src/wire/: bqparquet.rs  csvout.rs  mod.rs  mytsv.rs  pgcopy.rs  pgmytsv.rs  pgtext.rs  rowbinary.rs  textrow.rs
docs/: questdb-ingestion-study.md  usage.md
py-apitap/: Cargo.toml  README.md  pyproject.toml
py-apitap/python/apitap/: __init__.py
py-apitap/src/: lib.rs
py-apitap/tests/: test_ingestr_schema.py
tests/data/: README.md  orders.csv  people.csv
