[package]
name = "apitap-core"
description = "Blazing-fast database-to-database transfer engine (the apitap core)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "mysql",
    "chrono",
    "runtime-tokio-rustls",
] }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
thiserror = "2"
num_cpus = "1"
# Fast integer/float formatting for the MySQL text lane (binary read → TSV).
itoa = "1"
ryu = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
bytes = "1"
# LOAD DATA LOCAL INFILE streaming for the MySQL sink — sqlx can't do it.
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
# zlib-rs backend: ~2-4x faster than the default miniz_oxide at the same
# ratio — the gzip leg is the CPU wall on small cores (BigQuery route).
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
# Low-level writer only (no arrow): the BigQuery Parquet lane builds column
# chunks straight from Postgres binary COPY values. snap = SNAPPY pages.
parquet = { version = "54", default-features = false, features = ["snap", "zstd"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
